Added functionality of OpenAI api | AJAX functionality for OpenAI | Added section of Rewrite (HTML/CSS)

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ Saved_Models/EmoRoBERTa_model/
 templates/
 templateFiles/testing.html
 staticFiles/testing.css
-test_app.py/
+staticFiles/testing.js
